fix: aligned text and button

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -57,7 +57,6 @@ html, body {
   height: 100%;
   display: flex;
   list-style: none;
-  padding-left: 5px;
   align-self: center;
   }
 
@@ -72,10 +71,42 @@ html, body {
 
 #testingdiv {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     flex-direction: column;
   }
 #newDiv{
   align-self: center;
+}
+
+#dropDiv{
+
+  height: 30%;
+}
+
+#shuffleDiv{
+  margin: 5px;
+}
+.button {
+  border: none;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 8px 4px;
+  transition-duration: 0.4s;
+  background-color: purple;
+  cursor: pointer;
+}
+
+
+
+#buttonDiv{
+  background-color: #C71585;
+  color: white;
+  font-family: cursive;
+  font-size: 20px;
 }
